icon issue on mobile solved

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -19,12 +19,12 @@
   width: auto;
 }
 
-.fa-rotate-180 {
-  -webkit-transform: rotate(180deg);
-  -moz-transform: rotate(180deg);
-  -ms-transform: rotate(180deg);
-  -o-transform: rotate(180deg);
-  transform: rotate(180deg);
+.icon-rotate-180 {
+  -webkit-transform: rotate(180deg) translateY(50%) !important;
+  -moz-transform: rotate(180deg) translateY(50%) !important;
+  -ms-transform: rotate(180deg) translateY(50%) !important;
+  -o-transform: rotate(180deg) translateY(50%) !important;
+  transform: rotate(180deg) translateY(50%) !important;
 }
 
 #fastStatistics {
@@ -44,8 +44,7 @@
 }
 
 #fastStatistics .carousel-item .row {
-  overflow-x: hidden;
-  overflow-y: visible;
+  overflow: hidden;
   height: 100%;
 }
 #fastStatistics .carousel-item .row span {
@@ -67,14 +66,14 @@
 
 .carousel-item .row .bigI {
   position: absolute;
-  right: 5%;
-  top: 60%;
+  right: 0;
+  top: 75%;
   transform: translateY(-50%);
   z-index: 1;
 }
 
 .carousel-item .row .bigI i {
-  font-size: 3.5rem;
+  font-size: 4rem;
   opacity: 0.2;
 }
 
@@ -91,6 +90,7 @@
   .carousel-item .row .col-9 {
     flex: 0 0 100%;
     max-width: 100%;
+    height: 100%;
   }
 
   #fastStatistics .carousel-item p {
